<resources>
    <string name="app_name">Pashkov-v-8</string>
    <string name="Korzina">Корзина</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="button_8">Оплатить заказ</string>
    <string name="_2450">2450 рублей</string>
    <string name="Oplata">Оплата</string>
    <string name="na_karte">На карте</string>
    <string name="samovzv">Самовывоз</string>
    <string name="dostavka">Доставка</string>
    <string name="but4">+</string>
    <string name="but3">-</string>
    <string name="but5">Оплатить покупку</string>
    <string name="_950">950 рублей</string>
    <string name="_1">1</string>
    <string name="_1500">1500 рублей</string>
    <string name="korzina">Корзина</string>
    <string name="plus">-</string>
    <string name="minus">+</string>
    <string name="syshi">Syshi</string>
    <string name="syshi2">syshi2</string>
    <string name="plus1">plus</string>
    <string name="minus2">minus2</string>
    <string name="discr">discr</string>
    <string name="doc">doc</string>
    <string name="tod">tod</string>
    <string name="dar">dar</string>
    <string name="dart">dart</string>
    <string name="cotr">cotr</string>
    <string name="gfgf">gfgf</string>
    <string name="gfgfsg">gfgfsg</string>
    <string name="fgsgffg">fgsgffg</string>
    <string name="fddfdf">fddfdf</string>
    <string name="itog">Итого к оплате:</string>
    <string name="card">Карта</string>
    <string name="nal">Наличные</string>
    <string name="title_activity_maps">Map</string>
    <string name="fasf">Оплата и доставка заказа</string>
    <string name="fafasf">Доставка</string>
    <string name="fasfasf">Введите ваше имя</string>
</resources>